Included environment samples in the filter